fix(shared-link-page): adjust bg in "Shared Link" page to align with overall theme
- Address background issue in "Shared Link" Page by adding `[class*='dark:bg-gray-800']` to global styles
- Adjust input search background in GPT Store page to accommodate the changes made for "Shared Link" Page

Changes summary:
    - Fixed background inconsistency in the "Shared Link" Page by incorporating `[class*='dark:bg-gray-800']` into the global styles.
    - Adjusted input search background in the GPT Store page to maintain visual harmony after changes for the "Shared Link" Page.

--- a/extension-dev/css/index.css
+++ b/extension-dev/css/index.css
@@ -343,6 +343,10 @@ code.hljs {
   background-color: var(--c-surface-2) !important;
 }
 
+[class*="dark:bg-gray-800"] {
+  background-color: var(--c-bg-chats-container) !important;
+}
+
 [class*="bg-green-600"] {
   background-color: var(--c-accent) !important;
   color: var(--c-on-accent) !important;
@@ -836,7 +840,7 @@ main [data-testid^="conversation-turn-"] .group .bg-gray-100, main [data-testid^
 }
 
 main [data-testid^="conversation-turn-"] .group .bg-gray-100 svg.rounded-full, main [data-testid^="conversation-turn-"] .group [class*=":bg-gray-700"] svg.rounded-full {
-  border: 1px solid var(--avatar-color);
+  border-color: var(--avatar-color);
 }
 
 main [data-testid^="conversation-turn-"] .group .bg-gray-100 button[title], main [data-testid^="conversation-turn-"] .group [class*=":bg-gray-700"] button[title] {
@@ -1916,10 +1920,12 @@ main:has(.sticky [href="/gpts/editor"]) .sticky [class*="bg-gradient-to-"] butto
 
 .js-has-pseudo [csstools-has-31-2p-2x-32-1m-2w-2p-37-14-1a-37-38-2x-2r-2z-3d-w-2j-2w-36-2t-2u-1p-y-1b-2v-34-38-37-1b-2t-2s-2x-38-33-36-y-2l-15-w-2x-32-34-39-38-2j-34-30-2p-2r-2t-2w-33-30-2s-2t-36-1p-y-2b-2t-2p-36-2r-2w-w-34-39-2q-30-2x-2r-w-1z-28-2c-37-y-2l]:not(.does-not-exist):not(.does-not-exist):not(does-not-exist):not(does-not-exist) {
   outline: none;
+  background-color: var(--c-surface-2) !important;
 }
 
 main:has(.sticky [href="/gpts/editor"]) input[placeholder="Search public GPTs"] {
   outline: none;
+  background-color: var(--c-surface-2) !important;
 }
 
 .js-has-pseudo [csstools-has-31-2p-2x-32-1m-2w-2p-37-14-1a-37-38-2x-2r-2z-3d-w-2j-2w-36-2t-2u-1p-y-1b-2v-34-38-37-1b-2t-2s-2x-38-33-36-y-2l-15-w-2x-32-34-39-38-2j-34-30-2p-2r-2t-2w-33-30-2s-2t-36-1p-y-2b-2t-2p-36-2r-2w-w-34-39-2q-30-2x-2r-w-1z-28-2c-37-y-2l]:not(.does-not-exist):not(.does-not-exist):not(does-not-exist):not(does-not-exist)::placeholder {
